[package]
name = "bbitcoin"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15.0"
reqwest = { version = "0.12.9", features = ["json"] }
rusqlite = "0.32.1"
serde = { version = "1.0.215", features = ["derive"] }
serde_derive = "1.0.215"
serde_json = "1.0.132"
tokio = { version = "1.41.1", features = ["macros", "rt-multi-thread", "time"] }
